--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,14 +2,16 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 1px solid rgb(157, 223, 235);
+    background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAASwAAACoCAMAAABt9SM9AAAAA1BMVEWt2eZvScryAAAAR0lEQVR4nO3BAQEAAACCIP+vbkhAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAO8GxYgAAb0jQ/cAAAAASUVORK5CYII=");
 }
 
 .header__logo {
-    height: 60px;
+    height: 36px;
     object-fit: contain;
 }
 
 .header__icon {
-    padding: 20px
+    padding: 6px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
