--- a/src/components/ChatScreen.css
+++ b/src/components/ChatScreen.css
@@ -7,6 +7,10 @@
     max-width: 200px;
 }
 
+.chatScreen__messages {
+    padding-bottom: 60px;
+}
+
 .chatScreen__message {
     display: flex;
     align-items: center;
@@ -36,11 +40,10 @@
 
 .chatScreen__input {
     display:flex;
-    padding:5px;
     position:fixed;
     bottom:0;
     width: 100%;
-    border-top: 1px solid lightgray;
+    height: 50px;
 }
 
 .chatScreen__inputField {
